# openmail

./: .gitignore  README copy.md  README.md  pyproject.toml  run_web.sh  run_web_dev.sh
.github/workflows/: ci.yml  code-format.yml
docs/: EasyIMAPQuery.md  EmailManager.md
src/email_management/: __init__.py  email_assistant.py  email_manager.py  email_query.py  types.py
src/email_management/assistants/: classify_emails.py  compose_email.py  detect_phishing_for_email.py  evaluate_sender_trust_for_email.py  extract_tasks_from_emails.py  generate_follow_up_for_email.py  natural_language_query.py  prioritize_emails.py  reply.py  reply_suggestions.py  rewrite_email.py  summarize_attachments_for_email.py  summarize_thread_emails.py  summary.py  summary_multi.py  translate_email.py
src/email_management/auth/: oauth2.py
src/email_management/imap/: __init__.py  bodystructure.py  client.py  inline_cid.py  pagination.py  parser.py
src/openmail/: __init__.py  config.py  email_assistant.py  email_manager.py  email_query.py  logger.py  types.py
tests/: fake_imap_client.py  fake_smtp_client.py  test_assistant.py  test_email_assistant.py  test_email_manager.py  test_email_query.py  test_llm_model.py  test_oauth2_auth.py  test_password_auth.py  test_query.py  test_subscription_detector_and_service.py
webapp/: accounts_api.py  email_overview.py  email_service.py  main.py  oauth2.py  ttl_cache.py  utils.py
webapp/frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
webapp/static/: api.js  app.js  style.css  utils.js
webapp/templates/: index.html
(+110 files in other folders)
