[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmail"
version = "0.1.5"
description = "API for managing your email"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pydantic",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-xai",
    "langchain-groq",
    "langchain-anthropic",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
]
test = [
    "pytest",
]
web = [
    "python-dotenv",
    "fastapi[standard]",
    "uvicorn",
    "jinja2",
    "python-multipart",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openmail"]
include = ["src/openmail/py.typed"]


[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["src"]

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes baseline
# I: import sorting (isort)
# B: bugbear (common pitfalls)
# UP: pyupgrade (modern syntax)
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E501",
  "UP006", # don't force list[str] over List[str]
  "UP007", # don't force X | Y over Union[X, Y] (optional)
  "UP045", # typing.Any/typing.Optional modernizations etc (optional)
  "E731",  # allow assign a `lambda` expression to name
]

[tool.ruff.lint.isort]
known-first-party = ["openmail"]


